--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ banned-modules =
 max-line-length = 79
 
 [tool:pytest]
-addopts = --cov=amundsen_common --cov-fail-under=70 --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html -vvv
+addopts = --cov=inbot_common --cov-fail-under=70 --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html -vvv
 
 [coverage:run]
 omit = */models/*
